# Oddity-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  OddityEngine.sln  README.md  imgui.ini
OddityEngine/: OddityEngine.vcxproj  OddityEngine.vcxproj.filters
OddityEngine/shaders/: compile.bat
OddityEngine/source/: main.cpp
OddityEngine/source/character/: character.cpp  movement.h
OddityEngine/source/checks/: checks.cpp  checks.h
OddityEngine/source/graphics/: graphics.cpp  graphics.h  opengl.cpp  vulkan old.cpp  vulkan.cpp  vulkan_helper.cpp  vulkan_helper.h
OddityEngine/source/input/: input.cpp  input.h
include/: Oddity.h
libs/steam/: CMakeLists.txt
models/: cube.mtl  monkey.fbx
networks/: test.csv
shaders/: betterray.frag  buffer.frag  buffer.glsl  colorfrag.shader  colorvert.shader  compile.bat  constraint.glsl  definitions.glsl  flat_shade.geometry  frag.shader  index.glsl  layered_buffer.frag  layered_buffer_clear.frag  layered_object_ray.frag  layered_object_ray.vert  layered_point_ray.frag  layered_point_ray.geom  layered_screen_ray.frag  layered_screen_ray.vert  linefrag.shader  material.frag  network.frag  network.glsl  object.frag  object.glsl  object_ray.frag  object_ray.vert  object_trace.glsl  oldray.frag  physics.comp  physics_combine.comp  physics_constraints.comp  physics_other.comp  physics_self.comp  point_ray.vert  random.frag  ray.frag  ray.vert  ray_old.frag  ray_screen.frag  (+21 more)
source/: CMakeLists.txt  Object.cpp  Object.h  OddityEngine.cpp  OddityEngine.h  Player.cpp  Player.h  Tracer.cpp  Tracer.h  main.cpp
source/Graphics/: Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  Loader.cpp  Loader.h  Object.h  Window.cpp  Window.h
source/Graphics/Buffer/: Buffer.h  Bufferobject.h
source/Graphics/Object/: Material.cpp  Material.h  NetworkShape.cpp  NetworkShape.h  Object.cpp  Object.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h
source/Graphics/OpenGL/: Graphics.cpp  Window.cpp  Window.h
source/Graphics/OpenGL/Buffer/: Buffer.cpp  Buffer.h  Bufferobject.h
source/Graphics/OpenGL/Render/: Interface.cpp  Interface.h  Scene.cpp  Scene.h  Tracer.cpp  Tracer.h
source/Graphics/OpenGL/Shader/: Shader.cpp
source/Graphics/Render/: ComputeRenderer.cpp  ComputeRenderer.h  Interface.cpp  Interface.h  LayerRayer.cpp  LayerRayer.h  Layered.cpp  Layered.h  OddBlock.cpp  OddBlock.h  Raysterizer.cpp  Raysterizer.h  Scene.cpp  Scene.h  TestRenderer.cpp  TestRenderer.h  Tracer.cpp  Tracer.h
source/Graphics/Shader/: Program.cpp  Program.h  Shader.cpp  Shader.h
source/Graphics/Texture/: Atlas.cpp  Atlas.h
source/Input/: Event_Poller.cpp  Event_Poller.h  Eventable.h  Input.cpp  Input.h  Keyboard.h
source/Math/: Matrix.h  Matrix_old.h  SortableVector.h  Vector.h  Vector_old.h  Vector_overload.h  basics.h  random.h
source/Neural Network/: Network.cpp  Network.h  Network_Old1.cpp  Network_Old1.h  Network_old.h
source/Neural Network/Internal/: Activation.h  Dense.h  Layer.h  Losses.h  Random_evolve.h
source/NeuralNetwork/: Network.cpp  Network.h
source/NeuralNetwork/Internal/: Layer.h  Random_evolve.h
source/Object/: Object.cpp  Object.h
source/Physics/: Constraint.cpp  Constraint.h  Object.cpp  Object.h  World.cpp  World.h
source/Util/: CombinedIndex.h  Commander.cpp  Commander.h  Debug.cpp  Debug.h  Event_Poller.cpp  Eventable.h  File.cpp  File.h  Input.cpp  Input.h  Matrix.h  Pointer.h  SortableVector.h  Time.cpp  Time.h  Transform.h  Trie.h  Value.h  Vector.h  Vector_overload.h  file.h
source/base/: Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Control.cpp  Control.h  Cube.cpp  Cube.h  HalfEdge.cpp  HalfEdge.h  Loader.cpp  Loader.h  Object.cpp  Object.h  Player.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Shader.cpp  Shader.h  Tracer.cpp  Tracer.h  Window.cpp  Window.h
source/base/interfaces/: CallBack.h  Window.h
source/base/objects/: Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  GraphicsObject.cpp  GraphicsObject.h  Grid.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Physics.cpp  Physics.h
source/base/objects/geometry/: HalfEdge.cpp  HalfEdge.h  Polygon.cpp  Polygon.h
source/base/tools/: BufferTools.h  Debug.cpp  Debug.h  LoadTools.cpp  LoadTools.h
source/base/window/: WindowGTK.cpp  WindowGTK.h  WindowOpenGL.cpp  WindowOpenGL.h
source/character/: movement.h
source/common/: controls.h  loadShader.cpp  loadShader.h  loadTexture.cpp  loadTexture.h
source/debug/: Debug.cpp  Debug.h
source/graphics/: Camera.cpp  Camera.h  Graphics.cpp  Graphics.h  SDF_Tracer.h  Shader.cpp  Shader.h  Tracer.cpp  Tracer.h  Window.cpp  Window.h  graphics.cpp  graphics.h  vulkan.cpp  vulkan_helper.cpp  vulkan_helper.h
source/graphics/OpenGL/: Graphics.cpp  Graphics.h  Window.cpp  Window.h
source/graphics/OpenGL/Buffer/: Buffer.cpp  Buffer.h  Bufferobject.h
source/graphics/OpenGL/Render/: Interface.cpp  Interface.h
source/graphics/OpenGL/Shader/: Program.cpp  Program.h  Shader.cpp  Shader.h
source/graphics/Shader/: Program.cpp  Program.h  Shader.cpp  Shader.h
source/graphics/buffer/: Buffer.cpp  Buffer.h  Bufferobject.cpp  Bufferobject.h
source/graphics/render/: Object.h  Raysterizer.cpp  Raysterizer.h  Renderer.cpp  Renderer.h  SDF_Tracer.cpp  Tracer.cpp  Tracer.h
source/object/: Cube.cpp  Cube.h  Line.cpp  Line.h  Object.cpp  Object.h  Player.cpp  Player.h  Polygon.cpp  Sphere.cpp  Sphere.h  Transform.cpp  Transform.h
source/util/: Debug.cpp  Debug.h  Loader.cpp  Loader.h  Time.cpp  Time.h  Value.cpp  Value.h
source_old/character/: character.cpp
source_old/graphics/: graphic_libs.h  vulkan.h
source_old/input/: input.cpp
test/: CMakeLists.txt  HalfEdgePolygonTest.cpp  main.cpp
